# VeloMunicipal

./: README.md  app.py  back.py  data_enricher.py  data_loader.py  main.py  metrics.py  pyproject.toml  requirements.txt  storage.py
.github/workflows/: cloud_run_deploy_pr.yml
static/: robots.txt  sitemap.xml
templates/: base.html  commune.html  index.html
