[project]
name = "velomunicipal"
version = "0.1.0"
description = "Small data anlysis project to explore the relationship between municipalities and the presence of bike lanes."
requires-python = ">=3.14"
dependencies = [
    "geopandas>=1.1.3",
    "matplotlib>=3.10.8",
    "scipy>=1.17.1",
    "scipy-stubs~=1.17.1",
]
